argocd/apps/infra/traefik/sea1/ingress_argo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sea1-argo.generalprogramming.org`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          serversTransport: argo-no-tls
          # scheme: https
    - kind: Rule
      match: Host(`sea1-argo.generalprogramming.org`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          serversTransport: argo-no-tls
          # scheme: https    
  tls:
    certResolver: default
